[gd_scene load_steps=6 format=3 uid="uid://cqr18t50lbol0"]

[ext_resource type="Script" uid="uid://cfrvjvo8fytjo" path="res://levels/power/button/button.gd" id="1_0aefi"]
[ext_resource type="Shader" uid="uid://brlvkteghwcwc" path="res://global elements/glow.gdshader" id="2_0aefi"]
[ext_resource type="Texture2D" uid="uid://jbdoa34kdj0d" path="res://levels/power/button/button.png" id="3_0aefi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6fy0f"]
radius = 24.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v0g6q"]
shader = ExtResource("2_0aefi")
shader_parameter/BLOOM_THRESHOLD = 0.65
shader_parameter/BLOOM_INTENSITY = 5.0
shader_parameter/OPACITY = 1.0
shader_parameter/BLUR_ITERATIONS = 2
shader_parameter/BLUR_SIZE = 0.01
shader_parameter/BLUR_SUBDIVISIONS = 8

[node name="Button" type="Node2D"]
script = ExtResource("1_0aefi")
metadata/_custom_type_script = "uid://cggxrmqeulsxp"

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_6fy0f")

[node name="lever" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_v0g6q")
texture = ExtResource("3_0aefi")
hframes = 2
frame = 1

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="ButtonTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
[connection signal="timeout" from="ButtonTimer" to="." method="_on_button_timer_timeout"]
